--- a/Fireworks Engine/Sandbox/Sandbox.vcxproj
+++ b/Fireworks Engine/Sandbox/Sandbox.vcxproj
@@ -153,6 +153,7 @@
     <ClCompile Include="Test Dependencies\imgui-docking\imgui_impl_glfw.cpp" />
     <ClCompile Include="Test Dependencies\imgui-docking\imgui_impl_opengl3.cpp" />
     <ClCompile Include="Test Dependencies\imgui-docking\imgui_widgets.cpp" />
+    <ClCompile Include="test\scene3DTest.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="examples\groupsdemo.h" />
