fix: Fixed unexpected IBO crashing and added asserts for all openGL calls

--- a/Fireworks Engine/Fireworks Core/Fireworks Core.vcxproj
+++ b/Fireworks Engine/Fireworks Core/Fireworks Core.vcxproj
@@ -91,6 +91,7 @@
     <ClInclude Include="src\maths\vec4.h" />
     <ClInclude Include="src\physics\rigidbody2d.h" />
     <ClInclude Include="src\utils\fileutils.h" />
+    <ClInclude Include="src\utils\glassert.h" />
     <ClInclude Include="src\utils\imageloader.h" />
     <ClInclude Include="src\utils\timer.h" />
     <ClInclude Include="src\utils\wavloader.h" />
