--- a/Fireworks Engine/Fireworks Core/Fireworks Core.vcxproj.filters
+++ b/Fireworks Engine/Fireworks Core/Fireworks Core.vcxproj.filters
@@ -144,6 +144,9 @@
     <ClInclude Include="src\graphics\renderers\shotrenderer3d.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\utils\glassert.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\graphics\buffers\buffer.cpp">
