--- a/Fireworks Engine/Sandbox/Sandbox.vcxproj.filters
+++ b/Fireworks Engine/Sandbox/Sandbox.vcxproj.filters
@@ -968,6 +968,9 @@
     <ClInclude Include="test\scene3DTest.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="examples\falkengame\ship.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Test Dependencies\glm\detail\func_common.inl">
